Varias mejoras a Turnos. Funcionalidad casi finalizada

--- a/.classpath
+++ b/.classpath
@@ -16,5 +16,6 @@
 	<classpathentry kind="lib" path="C:/Users/cguxt/Downloads/jcalendar-1.4.zip"/>
 	<classpathentry kind="lib" path="jcalendar-1.4.jar"/>
 	<classpathentry kind="lib" path="jgoodies-looks-2.4.1.jar"/>
+	<classpathentry kind="lib" path="recursos"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
